Linked in css and js files and src locations.

--- a/GetItBack/index.html
+++ b/GetItBack/index.html
@@ -15,7 +15,9 @@
 	<meta http-equiv="cleartype" content="on">
 	
 	<!-- StyleSheets under here -->
-	
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css"/>
+	<link rel="stylesheet" href="http://dev.jtsage.com/cdn/datebox/latest/jquery.mobile.datebox.min.css">
+	<link rel="stylesheet" href="css/style.css"/>
 	
 	<!-- JavaScript is normally at the end of the body, except for Modernizr which enables HTML5 elements & feature detects -->
 	<script src="js/libs/modernizr.custom.min.js"></script>
@@ -26,6 +28,12 @@
 	
 
 	<!-- JavaScript under here -->
-
+	<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script> -->
+	<script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
+	<script src="http://dev.jtsage.com/cdn/datebox/latest/jquery.mobile.datebox.min.js"></script>
+	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
+	<!-- <script type="text/javascript" src="js/json.js"></script> -->
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
