Updated GetItBack/index.html and css/style.css to start setting up Interface Colors. All content on GetItBack/index.html is all just input to get styles down right.

--- a/GetItBack/index.html
+++ b/GetItBack/index.html
@@ -1,10 +1,15 @@
-<!doctype html>  
+<!doctype html>
+<!-- Zachery Hernandez -->
+<!-- 5/27/2012 -->
+<!-- Git It Back -->
+<!-- https://github.com/AlucardFair/Side-Projects/GetItBack -->
+<!-- Start of HTML Doc --> 
 <html lang="en">
 <head>
 
 	<meta charset="utf-8">
 	
-	<title>Mobile Site Template</title>
+	<title>Get It Back</title>
 	
 	<!--  Mobile viewport optimized: j.mp/bplateviewport -->
 	<meta name="HandheldFriendly" content="True">
@@ -25,6 +30,37 @@
 </head>
 <body>
 
+	<!-- Start of Home Page -->
+	<div data-role="page" id="home">
+	
+		<!-- Header -->
+		<div data-role="header" data-position="fixed" class="mainColor">
+			<div>
+				<img src="images/GIB_Branding.png" alt="Get It Back" class="imgSize" />
+			</div>
+		</div>
+		
+		<!-- Home Content -->
+		<div data-role="content">
+
+			<a data-role="button" class="mainColor">Lorum</a>
+			<a data-role="button" class="secondaryColor">Lorum</a>
+			
+		</div>
+		
+		<!-- Footer -->
+		<div data-role="footer" data-position="fixed">
+			<!-- Navbar -->
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#" data-icon="home" class="thirdColor"></a></li>
+					<li><a href="#" data-icon="info" class="mainColor"></a></li>
+					<li><a href="#"data-icon="check" class="mainColor"></a></li>
+				</ul>
+			</div>
+		</div>
+		
+	</div>
 	
 
 	<!-- JavaScript under here -->
